--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "daisyui": "^2.51.2",
+    "fuse.js": "^6.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2"
