--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon --exec node server.js",
-    "build": "nodemon server.js"
+    "build": "node server.js"
   },
   "author": "Tim Quattrochi",
   "license": "MIT",
