--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "client": "npm run dev --workspace=client",
     "server": "npm run start --workspace=server",
-    "start": "concurrently --kill-others-on-fail \"npm run server\"  \"npm run client\""
+    "start": "concurrently --kill-others-on-fail \"npm run server\"  \"npm run client\"",
+    "build": "npm run build --workspace=client && npm run build --workspace=server"
   }
 }
