--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "axios": "^1.3.4",
     "daisyui": "^2.51.2",
     "fuse.js": "^6.6.2",
