--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec node server.js",
-    "build": "node server.js"
+    "start": "node server.js",
+    "build": "node server.js",
+    "dev": "nodemon --exec node server.js"
   },
   "author": "Tim Quattrochi",
   "license": "MIT",
