--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     { "src": "packages/client/package.json", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "packages/server/$1" },
-    { "src": "/(.*)", "dest": "packages/client/$1" }
+    { "src": "/api/(.*)", "dest": "packages/server/server.js" },
+    { "src": "/(.*)", "dest": "packages/client/dist/$1" }
   ]
 }
