--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "@vercel/analytics": "^1.0.2",
     "axios": "^1.3.4",
     "daisyui": "^2.51.2",
     "fuse.js": "^6.6.2",
