--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
   "author": "Tim Quattrochi",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.0",
     "concurrently": "^7.6.0",
     "cookie-parser": "^1.4.6",
